--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   fl_chart: ^0.64.0
   provider: ^6.0.5
   pie_chart: ^5.3.2
+  connectivity: ^3.0.6
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
